# src/routers/recipes.js
@@ -1,10 +1,10 @@
 import { Router } from 'express';
-import { auth } from '../middlewares/auth.js';
+import { authenticate } from '../middlewares/authenticate.js';
 import { getOwnRecipes } from '../controllers/get-recipesController.js';
 import { ctrlWrapper } from '../utils/ctrlWrapper.js';
 
 const router = Router();
 
-router.get('/own', auth, ctrlWrapper(getOwnRecipes));
+router.get('/own', authenticate, ctrlWrapper(getOwnRecipes));
 
 export default router;
